--- a/resource/jdbc.properties
+++ b/resource/jdbc.properties
@@ -1,6 +1,6 @@
 druid.driverClassName=com.mysql.jdbc.Driver
 #druid.url=jdbc:mysql://127.0.0.1:3306/yxt?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false
-druid.url=jdbc:mysql://127.0.0.1:3306/easy_ui_one?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false&autoReconnect=true
+druid.url=jdbc:mysql://127.0.0.1:3306/sy?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false&autoReconnect=true
 druid.username=root
 druid.password=987654321
 #druid.password=75A4Ykwu9fW@
